# go-mirofish

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  Makefile  README-ZH.md  README.md  commitlint.config.cjs  docker-compose.release.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  start.bat  start.sh  up.bat  up.sh  vercel.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: go-build.yml  (+4 more)
.husky/: pre-commit  pre-push
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  llm_provider.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  locale.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
benchmark/: seed.txt
docker/: backend.Dockerfile  gateway.Dockerfile
docs/: roadmap.md  showcase.md
examples/: index.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
gateway/: go.mod  go.sum
locales/: en.json  languages.json
(+306 files in other folders)
