[project]
name = "go-mirofish-backend"
version = "0.1.0"
description = "go-mirofish backend for the local-first collective intelligence stack"
# camel-oasis pins Requires-Python <3.12; use 3.11.x in production and CI
requires-python = ">=3.11,<3.12"
license = { text = "AGPL-3.0" }
authors = [
    { name = "go-mirofish maintainers" }
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    
    "openai>=1.0.0",
    
    # Zep Cloud
    "zep-cloud==3.13.0",
    
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    
    "PyMuPDF>=1.24.0",
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
